shared: nvidia: fix BTF generation on pahole 1.24-git
Recenly pahole added support for emitting _Atomic typedefs. However, BTF
generator can't currently process them, so compilation gets aborted when
CONFIG_DEBUG_INFO_BTF=y.
Temporarily limit debug info generation to -g1 when it's on to avoid
this.
Note that pahole recently received WIP commits which remove _Atomic
attributes on-the-fly, but the BTF generator still doesn't work well
even with this change.

Signed-off-by: Alexander Lobakin <alobakin@mailbox.org>

--- a/src/nvidia/Makefile
+++ b/src/nvidia/Makefile
@@ -71,3 +71,8 @@ NVIDIA_API_CFLAGS += -DPORT_ASSERT_FAILED_USES_STRINGS=1
 
 NVIDIA_API_CFLAGS += -Wwrite-strings
 NVIDIA_API_CFLAGS += --std=gnu11
+
+# pahole can't handle _Atomic (WIP patch is ready), limit debuginfo to level 1
+ifneq ($(filter -g%,$(KBUILD_CFLAGS)),)
+NVIDIA_API_CFLAGS += -g1
+endif
